center align everything correctly

--- a/myapp/public/stylesheets/form.css
+++ b/myapp/public/stylesheets/form.css
@@ -29,7 +29,6 @@ HTML Formatting:
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-    text-align: center;
   }
   
   /* The actual pop-up box that contains everything in the form */
@@ -47,14 +46,15 @@ HTML Formatting:
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
+    display: flex !important;
     flex-direction: column;
   }
 
   /* Each li is an element on the form, such as <input> or <a> */
   .formWindow-content li{
-    padding: 1vh 40px;
+    display: flex;
     justify-content: center;
+    padding: 1vh 40px;
   }
 
   /* Large title at the top of the form (first <li>) */
@@ -99,9 +99,11 @@ HTML Formatting:
 
   /* Any button on the form, probably a submit button */
   .formSubmitButton{
+    text-align: center;
+    justify-self: center !important;
+    align-self: center !important;
     transition: 0.2s;
     cursor: pointer;
-    display: inline-block;
     text-decoration: none;
     width: 40%;
     padding: 10px;
@@ -124,9 +126,10 @@ HTML Formatting:
 
   /* The Close Button at the top right */
   .close {
+    position: relative;
     color: var(--darkGray3);
     float: right;
-    font-size: 50px;
+    font-size: 80px;
     font-weight: bold;
     line-height: 0;
   }
@@ -144,6 +147,11 @@ HTML Formatting:
     .formWindow-content{
       width: 85%;
     }
+
+    .formWindow-content li{
+      margin-bottom: 15px;
+    }
+
     .formWindow a{
       width: 90%;
       font-size: 5em;
@@ -153,9 +161,6 @@ HTML Formatting:
     }
     .close{
       font-size: 80px;
-    }
-    .formWindow textarea{
-      font-size: 2em;
     }
   }
 
